--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.1",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "recharts": "^2.7.2"
   }
 }
