--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
     "react-responsive-carousel": "^3.2.23",
