--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
     "recharts": "^2.7.2",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
