--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "formik": "^2.4.2",
     "fs": "^0.0.1-security",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "recharts": "^2.7.2",
     "web-vitals": "^2.1.4",
