--- a/zmobile_app/pubspec.yaml
+++ b/zmobile_app/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_polyline_points: ^1.0.0
+  google_maps_flutter: ^2.4.0
+  location: ^5.0.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
