--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
