--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "ucsc_group45",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -18,11 +19,18 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
+    "geocoder": "^0.2.3",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.2",
+    "node-geocoder": "^4.2.0",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "pg": "^8.11.2",
-    "recharts": "^2.7.2"
+    "recharts": "^2.7.2",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "uuid": "^9.0.1"
   }
 }
