--- a/zmobile_app/pubspec.yaml
+++ b/zmobile_app/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  http: ^0.13.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +38,9 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geocoding: ^2.1.1
   geolocator: ^10.1.0
+  http: ^1.1.0
+  uuid: ^4.1.0
+  custom_info_window: ^1.0.1
   
 
 dev_dependencies:
